src/objects/Mana_Technician__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mana Technicians</relationshipLabel>
        <relationshipName>Mana_Technicians</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coordinator_Id__c</fullName>
        <label>Coordinator Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinator_Name__c</fullName>
        <label>Coordinator Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_level__c</fullName>
        <label>Education level</label>
        <picklist>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posgrado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primaria completa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primaria incompleta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profesional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secundaria completa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secundaria incompleta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Técnico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tecnológico</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Foto__c</fullName>
        <formula>IF(ISBLANK( Photo__c) || ISNULL(Photo__c), &quot;&quot;, IMAGE(Photo__c ,&quot;Profile Picture&quot;, 263, 223))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Foto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Masculino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Femenino</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Landline__c</fullName>
        <label>Landline</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_User__c</fullName>
        <label>Mobile User</label>
        <referenceTo>gfsurveys__Mobile_User__c</referenceTo>
        <relationshipLabel>Mana Technicians_MU</relationshipLabel>
        <relationshipName>Mana_Technicians_MU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Municipality_1__c</fullName>
        <label>Municipality 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality_2__c</fullName>
        <label>Municipality 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality_3__c</fullName>
        <label>Municipality 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <picklist>
            <picklistValues>
                <fullName>CISP - Comitato Internazionale per lo Sviluppo dei Popoli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAO - Food and Agriculture Organization of the United Nations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundación Social de C.I. Unibán S.A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Politécnico Colombiano Jaime Isaza Cadavid</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Name__c</fullName>
        <label>Other Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Phone_Number__c</fullName>
        <label>Personal Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project_Phone_Number__c</fullName>
        <label>Project Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <picklist>
            <picklistValues>
                <fullName>Emprendimientos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huertas de las Oportunidades</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Mana Technician</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mana Technicians</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>